--- a/signup.html
+++ b/signup.html
@@ -33,59 +33,53 @@
         <p>Already have an account? <a href="login.html">Login</a></p>
     </div>
 
-    <script>
-        // Redirect if already logged in
-        if (localStorage.getItem("loggedIn")) {
-            window.location.href = "index.html";
+   <script>
+    // Redirect if already logged in
+    if (localStorage.getItem("loggedIn")) {
+        window.location.href = "index.html";
+    }
+
+    document.getElementById('signup-form').addEventListener('submit', function(e) {
+        e.preventDefault();
+
+        const username = document.getElementById('username').value.trim();
+        const email = document.getElementById('email').value.trim();
+        const password = document.getElementById('password').value.trim();
+
+        // Save user in localStorage
+        const users = JSON.parse(localStorage.getItem("users")) || [];
+        const exists = users.find(u => u.email === email);
+
+        if (exists) {
+            document.getElementById("signup-message").textContent = "❌ User already exists!";
+            return;
         }
 
-        document.getElementById('signup-form').addEventListener('submit', function(e) {
-            e.preventDefault();
+        users.push({ username, email, password });
+        localStorage.setItem("users", JSON.stringify(users));
 
-            const user = {
-                username: document.getElementById('username').value.trim(),
-                email: document.getElementById('email').value.trim(),
-                password: document.getElementById('password').value.trim()
-            };
+        document.getElementById("signup-message").style.color = "green";
+        document.getElementById("signup-message").textContent = "✅ Signup successful!";
 
-            fetch('http://localhost:8081/api/users/signup', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(user)
-                })
-                .then(res => {
-                    if (res.ok) {
-                        document.getElementById("signup-message").style.color = "green";
-                        document.getElementById("signup-message").textContent = "✅ Signup successful!";
-                        setTimeout(() => window.location.href = "login.html", 1500);
-                    } else {
-                        return res.text().then(msg => {
-                            throw new Error(msg || "Signup failed.");
-                        });
-                    }
-                })
-                .catch(err => {
-                    document.getElementById("signup-message").textContent = err.message || "Signup failed!";
-                });
+        setTimeout(() => window.location.href = "login.html", 1500);
+    });
+
+    // Show/hide nav buttons
+    document.addEventListener("DOMContentLoaded", () => {
+        const isLoggedIn = localStorage.getItem("loggedIn");
+        if (isLoggedIn) {
+            document.getElementById("login-link").style.display = "none";
+            document.getElementById("signup-link").style.display = "none";
+            document.getElementById("logout-btn").style.display = "inline-block";
+        }
+
+        document.getElementById("logout-btn").addEventListener("click", () => {
+            localStorage.removeItem("loggedIn");
+            window.location.href = "login.html";
         });
+    });
+</script>
 
-        // Show/hide nav buttons
-        document.addEventListener("DOMContentLoaded", () => {
-            const isLoggedIn = localStorage.getItem("loggedIn");
-            if (isLoggedIn) {
-                document.getElementById("login-link").style.display = "none";
-                document.getElementById("signup-link").style.display = "none";
-                document.getElementById("logout-btn").style.display = "inline-block";
-            }
-
-            document.getElementById("logout-btn").addEventListener("click", () => {
-                localStorage.removeItem("loggedIn");
-                window.location.href = "login.html";
-            });
-        });
-    </script>
 </body>
 
 </html>
