--- a/login.html
+++ b/login.html
@@ -32,55 +32,32 @@
     </div>
 
     <script>
-        // Example static users (can be extended or synced with signup)
-        const users = [
-            { email: "admin@example.com", password: "admin123" },
-            { email: "user@example.com", password: "user123" }
-        ];
+      document.getElementById("login-form").addEventListener("submit", function(e) {
+    e.preventDefault();
 
-        if (localStorage.getItem("loggedIn")) {
-            window.location.href = "index.html";
-        }
+    const email = document.getElementById("email").value.trim();
+    const password = document.getElementById("password").value.trim();
 
-        document.getElementById("login-form").addEventListener("submit", function(e) {
-            e.preventDefault();
+    if (!email || !password) {
+        alert("Please enter both email and password.");
+        return;
+    }
 
-            const email = document.getElementById("email").value.trim();
-            const password = document.getElementById("password").value.trim();
+    // Get users stored in localStorage
+    const users = JSON.parse(localStorage.getItem("users")) || [];
 
-            if (!email || !password) {
-                alert("Please enter both email and password.");
-                return;
-            }
+    // Check if user exists
+    const user = users.find(u => u.email === email && u.password === password);
 
-            // Check against static users
-            const foundUser = users.find(user => user.email === email && user.password === password);
+    if (user) {
+        localStorage.setItem("loggedIn", "true");
+        alert("Login successful!");
+        window.location.href = "index.html";
+    } else {
+        alert("Invalid email or password.");
+    }
+});
 
-            if (foundUser) {
-                localStorage.setItem("loggedIn", "true");
-                localStorage.setItem("userEmail", email);
-                alert("Login successful!");
-                window.location.href = "index.html";
-            } else {
-                alert("Invalid email or password!");
-            }
-        });
-
-        // Logout handling
-        document.addEventListener("DOMContentLoaded", () => {
-            const isLoggedIn = localStorage.getItem("loggedIn");
-            if (isLoggedIn) {
-                document.getElementById("login-link").style.display = "none";
-                document.getElementById("signup-link").style.display = "none";
-                document.getElementById("logout-btn").style.display = "inline-block";
-            }
-
-            document.getElementById("logout-btn").addEventListener("click", () => {
-                localStorage.removeItem("loggedIn");
-                localStorage.removeItem("userEmail");
-                window.location.href = "login.html";
-            });
-        });
     </script>
 </body>
 
