--- a/signup.html
+++ b/signup.html
@@ -34,50 +34,36 @@
     </div>
 
    <script>
-    // Redirect if already logged in
-    if (localStorage.getItem("loggedIn")) {
-        window.location.href = "index.html";
+   
+document.getElementById("signup-form").addEventListener("submit", function(e) {
+    e.preventDefault();
+
+    const email = document.getElementById("email").value.trim();
+    const password = document.getElementById("password").value.trim();
+
+    if (!email || !password) {
+        alert("Please enter both email and password.");
+        return;
     }
 
-    document.getElementById('signup-form').addEventListener('submit', function(e) {
-        e.preventDefault();
+    // Get users from localStorage (or empty array if none exist)
+    let users = JSON.parse(localStorage.getItem("users")) || [];
 
-        const username = document.getElementById('username').value.trim();
-        const email = document.getElementById('email').value.trim();
-        const password = document.getElementById('password').value.trim();
+    // Check if email already exists
+    const userExists = users.find(u => u.email === email);
+    if (userExists) {
+        alert("User already exists. Please login.");
+        return;
+    }
 
-        // Save user in localStorage
-        const users = JSON.parse(localStorage.getItem("users")) || [];
-        const exists = users.find(u => u.email === email);
+    // Save new user
+    users.push({ email: email, password: password });
+    localStorage.setItem("users", JSON.stringify(users));
 
-        if (exists) {
-            document.getElementById("signup-message").textContent = "❌ User already exists!";
-            return;
-        }
+    alert("Signup successful! Please login now.");
+    window.location.href = "login.html";
+});
 
-        users.push({ username, email, password });
-        localStorage.setItem("users", JSON.stringify(users));
-
-        document.getElementById("signup-message").style.color = "green";
-        document.getElementById("signup-message").textContent = "✅ Signup successful!";
-
-        setTimeout(() => window.location.href = "login.html", 1500);
-    });
-
-    // Show/hide nav buttons
-    document.addEventListener("DOMContentLoaded", () => {
-        const isLoggedIn = localStorage.getItem("loggedIn");
-        if (isLoggedIn) {
-            document.getElementById("login-link").style.display = "none";
-            document.getElementById("signup-link").style.display = "none";
-            document.getElementById("logout-btn").style.display = "inline-block";
-        }
-
-        document.getElementById("logout-btn").addEventListener("click", () => {
-            localStorage.removeItem("loggedIn");
-            window.location.href = "login.html";
-        });
-    });
 </script>
 
 </body>
