--- a/login.html
+++ b/login.html
@@ -32,33 +32,25 @@
     </div>
 
     <script>
-  <script>
-document.getElementById("login-form").addEventListener("submit", function(e) {
+document.getElementById("login-form").addEventListener("submit", function (e) {
     e.preventDefault();
 
     const email = document.getElementById("email").value.trim();
     const password = document.getElementById("password").value.trim();
 
-    if (!email || !password) {
-        alert("Please enter both email and password.");
-        return;
-    }
-
-    // Get users from localStorage
     const users = JSON.parse(localStorage.getItem("users")) || [];
-
-    // Find user
     const user = users.find(u => u.email === email && u.password === password);
 
     if (user) {
+        localStorage.setItem("loggedIn", "true");
         localStorage.setItem("loggedInUser", email);
         alert("Login successful!");
-        window.location.href = "index.html";
+        window.location.href = "index.html"; // or home.html, whichever is your homepage
     } else {
         alert("Invalid email or password.");
     }
 });
-</script>
+
 
     </script>
 </body>
